--- a/Kaiserreich Korean Translation/localisation/KR_Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Wallonia_l_english.yml
@@ -24,7 +24,7 @@ WLL_authoritarian_democrat_party:0 "국왕 지지파"
 
 Government_Failed:0 "The Government has Failed!"
 Monarchy_Restored:0 "The Monarchy has been Restored"
-Absolutism:0 "Adalbert reigns Absolute"
+Absolutism:0 "Adelbert reigns Absolute"
 Constitutional_Monarchy:0 "Return of the Constitutional Monarchy"
 Republic_Established:0 "The Republic has been Established"
 Syndicalist_Victory:0 "The Syndicalists win the Election!"
@@ -34,8 +34,8 @@ LIB_VIC:0 "PL Victory"
 SOC_PRES:0 "Fernand Dehousse leads the POB"
 SYND_CHAIR:0 "Lucie Dujardin leads the POB"
 
-wll.CON.tt:0 "\n §GOur choice of Government will directly influence our Constitution §!\n\n"
-wll.GOV.tt:0 "\n §GOur Government will be decided by our choice of Coalition Partner §!\n\n"
+wll.CON.tt:0 "\n§GOur choice of Government will directly influence our Constitution §!\n\n"
+wll.GOV.tt:0 "\n§GOur Government will be decided by our choice of Coalition Partner §!\n\n"
 
 Georges_Prosper_Remi:0 "Georges Prosper Remi"
 
@@ -138,11 +138,11 @@ wll.33.d:0 "Smelling their chance, the Liberals have decided to throw their own 
 wll.33.a:0 "Where do we get our support from now?"
 
 wll.34.t:0 "Protest in La Louvière"
-wll.34.d:0 "It appears that in La Louvière thousands of disgruntled miners have come down to the town square to protest against the pro-German government and to demand Adalbert's abdication. Feldgendarmerie have been keeping watch on the protest and so far have been able to discourage violence between the Walloons and the much smaller counterprotest by German citizens. Though only small in size, the protest marks the end of an era. Further protests around the nation are already being organised and a general strike has now kept the nation paralysed for two weeks. The situation is becoming completely untenable with many Germans leaving the nation to avoid repression by the syndicalists."
+wll.34.d:0 "It appears that in La Louvière thousands of disgruntled miners have come down to the town square to protest against the pro-German government and to demand Adelbert's abdication. Feldgendarmerie have been keeping watch on the protest and so far have been able to discourage violence between the Walloons and the much smaller counterprotest by German citizens. Though only small in size, the protest marks the end of an era. Further protests around the nation are already being organised and a general strike has now kept the nation paralysed for two weeks. The situation is becoming completely untenable with many Germans leaving the nation to avoid repression by the syndicalists."
 wll.34.a:0 "The monarchy is faltering!"
 
 wll.35.t:0 "The Namur March"
-wll.35.d:0 "Further protests are engulfing the nation, with many people leaving their homes to gather on the streets of Namur. A product of the prestigious regional glass industry, a life-sized sculpture of Adalbert has been toppled in the town square and symbolically smashed to bits with mining pickaxes. Though police were able to arrest the perpetrators it was already too late as shards of glass were quickly grabbed by bystanders permanently memorialising the events of the day."
+wll.35.d:0 "Further protests are engulfing the nation, with many people leaving their homes to gather on the streets of Namur. A product of the prestigious regional glass industry, a life-sized sculpture of Adelbert has been toppled in the town square and symbolically smashed to bits with mining pickaxes. Though police were able to arrest the perpetrators it was already too late as shards of glass were quickly grabbed by bystanders permanently memorialising the events of the day."
 wll.35.a:0 "We must fortify the Palace."
 
 wll.36.t:0 "Royal Councillor Resigns"
@@ -155,11 +155,11 @@ wll.37.a:0 "Abdication is the only dignified way out."
 wll.37.b:0 "But what about a referendum?"
 
 wll.38.t:0 "Referendum Refused"
-wll.38.d:0 "In a last ditch effort to retain power Adalbert requested the government hold a referendum on the future of the monarchy but was turned down. Support for the King has almost reached single digits, making a costly referendum pointless. The proposal was put to a vote and unanimously voted down. The reign of King Adalbert is over."
+wll.38.d:0 "In a last ditch effort to retain power Adelbert requested the government hold a referendum on the future of the monarchy but was turned down. Support for the King has almost reached single digits, making a costly referendum pointless. The proposal was put to a vote and unanimously voted down. The reign of King Adelbert is over."
 wll.38.a:0 "Sign the abdication papers."
 
-wll.39.t:0 "King Adalbert I Abdicates"
-wll.39.d:0 "Turned down by both the Flemish and the Walloons, Adalbert has finally given in and at 4pm put down his final signature as King of the Flemish and Walloons. Although German rule is far from over, the monarchy has reached its end."
+wll.39.t:0 "King Adelbert I Abdicates"
+wll.39.d:0 "Turned down by both the Flemish and the Walloons, Adelbert has finally given in and at 4pm put down his final signature as King of the Flemish and Walloons. Although German rule is far from over, the monarchy has reached its end."
 wll.39.a:0 "Hoist the Cok Wallon!"
 
 wll.310.t:0 "First Walloon Elections"
@@ -173,16 +173,16 @@ wll.311.a:0 "The real work starts now."
 
 #Give in to their demands
 
-wll.41.t:0 "Adalbert Caves in to the Strikers"
-wll.41.d:0 "With his back against the wall and his position as strong sovereign growing increasingly fragile, King Adalbert has agreed to sign the Labour Act. The syndicalists left their position and their leader could be seen shaking hands with the King, publicly indicating a curious softening of Adalbert's absolutist obsession."
+wll.41.t:0 "Adelbert Caves in to the Strikers"
+wll.41.d:0 "With his back against the wall and his position as strong sovereign growing increasingly fragile, King Adelbert has agreed to sign the Labour Act. The syndicalists left their position and their leader could be seen shaking hands with the King, publicly indicating a curious softening of Adelbert's absolutist obsession."
 wll.41.a:0 "The Labour Act is signed."
 
 wll.42.t:0 "Support for the King Increases"
-wll.42.d:0 "Impressed by the decisive actions of their King, Parliament gave a standing ovation on their next sitting. The leader of the POB, Fernand Dehousse, gave a speech openly praising Adalbert and announcing his push for a more democratic constitutional monarchy."
+wll.42.d:0 "Impressed by the decisive actions of their King, Parliament gave a standing ovation on their next sitting. The leader of the POB, Fernand Dehousse, gave a speech openly praising Adelbert and announcing his push for a more democratic constitutional monarchy."
 wll.42.a:0 "Public adulation, interesting..."
 
 wll.43.t:0 "Truce Offered to the Resistance"
-wll.43.d:0 "With the Liège province partially pacified, Adalbert has offered a truce to the syndicalist resistance which still fiercly defends the western villages of Hainaut. Promising a royal pardon and the option for them to create their own legal party, the King has demanded a complete end to hostilities. The syndicalist rebels however have refused this offer and increased their raids on our military camps."
+wll.43.d:0 "With the Liège province partially pacified, Adelbert has offered a truce to the syndicalist resistance which still fiercly defends the western villages of Hainaut. Promising a royal pardon and the option for them to create their own legal party, the King has demanded a complete end to hostilities. The syndicalist rebels however have refused this offer and increased their raids on our military camps."
 wll.43.a:0 "They have had their chance."
 
 wll.44.t:0 "Syndicalist Resistance Crushed"
@@ -192,7 +192,7 @@ wll.44.a:0 "The Syndicalists have been defeated for now."
 #Send in the Feldgendarmerie
 
 wll.51.t:0 "Troops Storm Seraing"
-wll.51.d:0 "Just like last year Adalbert has yet again given the order to disperse any protesters violently and break up the strikes with force. Within two hours the factory complex was cleared of all opposition. The floor is red with blood as the last of the syndicalists are slaughtered, a clear warning to all others willing to protest."
+wll.51.d:0 "Just like last year Adelbert has yet again given the order to disperse any protesters violently and break up the strikes with force. Within two hours the factory complex was cleared of all opposition. The floor is red with blood as the last of the syndicalists are slaughtered, a clear warning to all others willing to protest."
 wll.51.a:0 "The resistance will be quelled again."
 
 wll.52.t:0 "Mons Liberated"
@@ -200,7 +200,7 @@ wll.52.d:0 "After our defeat at Mons during the Belgian revolution, our troops h
 wll.52.a:0 "Fire at will, men."
 
 wll.53.t:0 "POB Banned From Parliament"
-wll.53.d:0 "Though no clear connection can be found between the moderate faction of the POB who has been part of the government since 1919 and the radical syndicalist splinter faction, Adalbert has signed a royal decree outlawing the party and kicking it out of the government. Although loud protests erupted as expected, all were quelled by the prospect of prison."
+wll.53.d:0 "Though no clear connection can be found between the moderate faction of the POB who has been part of the government since 1919 and the radical syndicalist splinter faction, Adelbert has signed a royal decree outlawing the party and kicking it out of the government. Although loud protests erupted as expected, all were quelled by the prospect of prison."
 wll.53.a:0 "Another step towards the end of Syndicalism."
 
 wll.54.t:0 "A New Wallonia"
@@ -208,7 +208,7 @@ wll.54.d:0 "Much has changed during the last two weeks, with the remaining syndi
 wll.54.a:0 "I think a toast is in order."
 
 wll.55.t:0 "Royal Councillor Appointed"
-wll.55.d:0 "While the power of Parliament has been curbed they still retain some power. Therefore we still need our royal councillor to keep an eye on them. While Eggert Reeder has served us well for many years, he seems to have a faltering resolve and may be in need of a replacement. Much of our power in Parliament is based around the Catholic Party which has proposed a candidate to succeed Reeder. The Liberals have also announced their favorite and are pressing Adalbert to make a choice."
+wll.55.d:0 "While the power of Parliament has been curbed they still retain some power. Therefore we still need our royal councillor to keep an eye on them. While Eggert Reeder has served us well for many years, he seems to have a faltering resolve and may be in need of a replacement. Much of our power in Parliament is based around the Catholic Party which has proposed a candidate to succeed Reeder. The Liberals have also announced their favorite and are pressing Adelbert to make a choice."
 wll.55.a:0 "Reeder will remain councillor."
 wll.55.b:0 "The Catholic candidate gets chosen."
 wll.55.c:0 "The Liberal candidate gets chosen."
@@ -375,7 +375,7 @@ wll.111.d:0 "We have been betrayed by our socialist brothers and have to face Ge
 wll.111.a:0 "Is the revolution lost?"
 
 wll.112.t:0 "Syndicalism in Wallonia"
-wll.112.d:0 "It appears that syndicalism has spread to our puppet state of Wallonia and that Adalbert has once again been deposed. Our armies are already preparing for an invasion but may still be called off and prevent retaliation from the Commune of France."
+wll.112.d:0 "It appears that syndicalism has spread to our puppet state of Wallonia and that Adelbert has once again been deposed. Our armies are already preparing for an invasion but may still be called off and prevent retaliation from the Commune of France."
 wll.112.a:0 "Prepare the attack!"
 wll.112.b:0 "Wallona is no longer pressing."
 
@@ -449,12 +449,12 @@ wll.1325.d:0 "It appears that the brutish Mittelafrikan regime refused all of ou
 wll.1325.a:0 "Hopefully they don't act too drastically..."
 
 wll.1326.t:0 "Returns on Congo Investments"
-wll.1326.d:0 "After the expansion of the railroads connecting Boma and Katanga, the first shipments are entering the harbour of Antwerp. Due to our arrangements with the Flemish government, splitting the profits, most of the goods are reaching Liège. Copper, Uranium, Gold and much more are flowing through the Adalbert Canal ready for exporting into Europe."
+wll.1326.d:0 "After the expansion of the railroads connecting Boma and Katanga, the first shipments are entering the harbour of Antwerp. Due to our arrangements with the Flemish government, splitting the profits, most of the goods are reaching Liège. Copper, Uranium, Gold and much more are flowing through the Adelbert Canal ready for exporting into Europe."
 wll.1326.a:0 "Money is flowing in."
 
 ### Focuses ###
 WLL_Hold_On_To_The_Monarchy:0 "Preserve the Monarchy"
-WLL_Hold_On_To_The_Monarchy_desc:0 "The Flemish may have kicked us out but the rule of Adalbert shall continue in the south."
+WLL_Hold_On_To_The_Monarchy_desc:0 "The Flemish may have kicked us out but the rule of Adelbert shall continue in the south."
 WLL_Consolidate_Royal_Power:0 "Consolidate Royal Power"
 WLL_Consolidate_Royal_Power_desc:0 "Once again it has been proven that only through harsh actions the population can be kept under control/"
 WLL_Form_Royal_Guard:0 "Form Royal Guard"
@@ -555,48 +555,89 @@ WLL_Demand_Our_Rightfull_Land:0 "Demand our Rightful Land"
 WLL_Demand_Our_Rightfull_Land_desc:0 "We won't settle for the humiliation imposed on us by the Germans and Flemish. All of Belgium belongs to Degrelle!"
 
 WLL_Walloon_Expansion:0 "Walloon Expansion"
+WLL_Walloon_Expansion_desc:0 "The lands of Wallonia abound with unharnessed potential. Let the land finally be put to work for those who labour on them. We should develop the basis of a new economic plan under which our economy can stand upon its own two feet."
 WLL_The_Sillon_Industriel:0 "The Sillon Industriel"
+WLL_The_Sillon_Industriel_desc:0 ""
 WLL_Direction_of_the_Industry:0 "Direction of the Industry"
+WLL_Direction_of_the_Industry_desc:0 "Wallonia was the beating heart of Belgian industry. It cannot be denied that the fate of the forges and factories are intimately linked with that of the entire nation. Our industrial aparatus must be comprehensively assessed in order to facilitate its expansion."
 WLL_Double_Down_On_Heavy_Industry:0 "Double Down on Heavy Industry"
+WLL_Double_Down_On_Heavy_Industry_desc:0 "While our economy has evolved with the times, heavy industry has remained its foundation. We should further industrialise our nation, offering generous incentives for the development of new industrial zones in the nation's middling cities."
 WLL_Redefine_Walloon_Expertise:0 "Redefine Walloon Expertise"
+WLL_Redefine_Walloon_Expertise_desc:0 ""
 WLL_Future_Resource_Extraction:0 "Future Resource Extraction"
+WLL_Future_Resource_Extraction_desc:0 ""
 WLL_Breakthrough_In_Engineering:0 "Breakthrough in Engineering"
+WLL_Breakthrough_In_Engineering_desc:0 ""
 WLL_Aviation_Industry:0 "Aviation Industry"
+WLL_Aviation_Industry_desc:0 "Our nation cannot rely even on our closest of allies to supply sufficient aeroplanes in times of war. To have peace of mind at last, we must fund the construction of new state aircraft factories."
 WLL_Build_Our_Own_Cyclotron:0 "Build Our Own Cyclotron"
+WLL_Build_Our_Own_Cyclotron_desc:0 ""
 WLL_Expand_Seraing_Steel_Mills:0 "Expand Seraing Steel Mills"
+WLL_Expand_Seraing_Steel_Mills_desc:0 ""
 WLL_Build_The_Liege_Charleroi_Highway:0 "Build the Liege-Charleroi Highway"
+WLL_Build_The_Liege_Charleroi_Highway_desc:0 ""
 WLL_Fund_University_of_Liege:0 "Fund the University of Liège"
+WLL_Fund_University_of_Liege_desc:0 ""
 WLL_German_Investements:0 "German Investments"
+WLL_German_Investements_desc:0 "Our nation's connection to Germany has not only survived but continues to strengthen. Surely German investment is key to ensuring not only the end of our economic woes, but sustained growth into the distant future."
 WLL_Increase_German_Export:0 "Increase German Exports"
+WLL_Increase_German_Export_desc:0 ""
 WLL_Krupp_Wallonia:0 "Krupp Wallonia"
+WLL_Krupp_Wallonia_desc:0 ""
 WLL_Encourage_Frontaliers:0 "Encourage Frontaliers"
+WLL_Encourage_Frontaliers_desc:0 ""
 WLL_Create_The_Industrial_Commitee:0 "Create the Industrial Committee"
+WLL_Create_The_Industrial_Commitee_desc:0 ""
 WLL_Exploitation_of_Charleroi_Glass_Industry:0 "Exploit the Charleroi Glass Industry"
+WLL_Exploitation_of_Charleroi_Glass_Industry_desc:0 ""
 
 WLL_Tumult_In_The_Army:0 "Tumult in the Army"
+WLL_Tumult_In_The_Army_desc:0 "The breakup of Flanders-Wallonia has left our military command and organisation in tatters. A new general staff must be hastily created and the situation dealt with by any means necessary."
 WLL_Form_Bilingual_Staff:0 "Form a Bilingual Staff"
+WLL_Form_Bilingual_Staff_desc:0 "While the legacy of German military control holds fast and thus that language cannot be fully abandoned, we can begin to reintroduce French as the primary language of instruction in military academies and promote bilingualism among the existant general staff."
 WLL_Retain_German_Staff:0 "Retain German Staff"
+WLL_Retain_German_Staff_desc:0 ""
 WLL_Trench_Warfare:0 "Trench Warfare"
+WLL_Trench_Warfare_desc:0 ""
 WLL_Panzer_Doctrine:0 "Panzer Doctrine"
+WLL_Panzer_Doctrine_desc:0 ""
 WLL_FRC:0 "FRC Artillery Foundry"
+WLL_FRC_desc:0 ""
 WLL_Luxembourg_Field_Hospitals:0 "Luxembourg Field Hospitals"
+WLL_Luxembourg_Field_Hospitals_desc:0 ""
 WLL_FN_Guns:0 "FN Arms Production"
+WLL_FN_Guns_desc:0 ""
 WLL_Light_Tank_Program:0 "Light Tank Program"
+WLL_Light_Tank_Program_desc:0 ""
 WLL_Invest_in_Half_Tracks:0 "Invest in Half-Tracks"
+WLL_Invest_in_Half_Tracks_desc:0 ""
 
 WLL_Project_Seagull:0 "Project Seagull"
+WLL_Project_Seagull_desc:0 "The noble cock does not fair well at sea; with a coastline now in our posession, we must adapt accordingly. We must learn to fly as the gulls do, developing a navy of our own."
 WLL_Study_with_the_Kaiserliche_Marine:0 "Study With the Kaiserliche Marine"
+WLL_Study_with_the_Kaiserliche_Marine_desc:0 "As we have maintained a strong relationship with Germany, we can directly study the administration and doctrine of the greatest naval force on the planet - the Kaiserliche Marine. The lessons we are to learn from such a venture are sure to be great!"
 WLL_Enlist_German_Officers:0 "Enlist German Officers"
+WLL_Enlist_German_Officers_desc:0 ""
 WLL_Establish_The_Merchant_Marine:0 "Establish the Merchant Marine"
+WLL_Establish_The_Merchant_Marine_desc:0 ""
 WLL_Maritime_Commerce:0 "Boost Maritime Commerce"
+WLL_Maritime_Commerce_desc:0 ""
 WLL_Expand_Our_Drydocks:0 "Expand Our Drydocks"
+WLL_Expand_Our_Drydocks_desc:0 ""
 WLL_Commandeer_Trade_Vessels:0 "Commandeer Trade Vessels"
+WLL_Commandeer_Trade_Vessels_desc:0 ""
 
 WLL_The_Flying_Rooster:0 "The Flying Rooster"
+WLL_The_Flying_Rooster_desc:0 ""
 WLL_Spreads_His_Wings:0 "Spreads Its Wings"
+WLL_Spreads_His_Wings_desc:0 ""
 WLL_Dives_Down:0 "Dives Down"
+WLL_Dives_Down_desc:0 ""
 WLL_Air_Defence_of_the_Territory:0 "Territorial Air Defence"
+WLL_Air_Defence_of_the_Territory_desc:0 ""
 WLL_Invest_in_RADAR:0 "Invest in RADAR"
+WLL_Invest_in_RADAR_desc:0 ""
 WLL_Fighter_Supremacy:0 "Fighter Supremacy"
+WLL_Fighter_Supremacy_desc:0 ""
 WLL_Bomber_Supremacy:0 "Bomber Supremacy"
-
+WLL_Bomber_Supremacy_desc:0 ""
