--- a/Kaiserreich Korean Translation/localisation/KR_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_War_l_english.yml
@@ -105,5 +105,5 @@ WAR_NAME_ETH_SOM:0 "오가덴 전쟁"
 WAR_NAME_SOM_ETH:0 "오가덴 전쟁"
 
 ### Ottoman Wars ###
-WAR_NAME_LYB_OTT:0 "트리폴리타니아 독립 전쟁"
-WAR_NAME_OTT_LYB:0 "트리폴리타니아 봉기"
+WAR_NAME_LBA_OTT:0 "트리폴리타니아 독립 전쟁"
+WAR_NAME_OTT_LBA:0 "트리폴리타니아 봉기"
