--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -108,9 +108,9 @@ USA_america_51_national_populist_ADJ:0 "미국"
 USA_america_51_national_populist_DEF:0 "미합중국"
 
 ### Opinion Modifiers ###
-USA_joins_us_MITT:0 "America has aligned with Germany"
-occupied_alaska_CAN:0 "Canada occupied Alaska"
-USA_embargo_syndicalism:0 "American Embargo on the International"
+USA_joins_us_MITT:0 "미국이 독일과 동맹을 맺음"
+occupied_alaska_CAN:0 "캐나다가 알래스카를 점령함"
+USA_embargo_syndicalism:0 "미국이 인터내셔널에 통상금지 조치를 취함"
 COUGHLIN_RADIO_STOP:0 "Coughlin's Broadcasts Stopped"
 COUGHLIN_RADIO_CONTINUES:0 "Coughlin's Broadcasts Continue"
 USA_sacco_vanzetti_guilty:0 "Sacco and Vanzetti have been declared guilty"
@@ -121,14 +121,14 @@ monroe_doctrine_prevails:0 "Kept the Monroe Doctrine"
 monroe_doctrine_reinstituted:0 "Re-instituted the Monroe Doctrine"
 
 ### Global and Country Flags ###
-USA_civil_war_avoided_flag:0 "The Civil War has been avoided"
-USA_civil_war_over_flag:0 "The Civil War is over"
-USA_civil_war_begun_flag:0 "The Civil War has begun"
-macarthur_keeps_power_flag:0 "MacArthur has kept his emergency powers"
-macarthur_gives_up_power:0 "MacArthur has given up power"
-USA_democracy_triumphs_flag:0 "Democracy has triumphed"
-league_of_american_states:0 "League of American States"
-american_russian_alliance:0 "Russian-American Coalition"
+USA_civil_war_avoided_flag:0 "내전을 피함"
+USA_civil_war_over_flag:0 "내전이 끝남"
+USA_civil_war_begun_flag:0 "내전이 시작됨"
+macarthur_keeps_power_flag:0 "맥아더가 비상 지휘권력을 계속 쥐고있음"
+macarthur_gives_up_power:0 "맥아더가 권력을 포기함"
+USA_democracy_triumphs_flag:0 "민주주의가 승리함"
+league_of_american_states:0 "아메리카 국가 연맹"
+american_russian_alliance:0 "러시아-미국 연합"
 
 
 
@@ -159,21 +159,21 @@ USA_new_diplomatic_corps_tooltip:0 "§MWe should send out new Diplomats and Cons
 
 
 ### Ideas ###
-USA_great_depression:0 "The Great Depression"
+USA_great_depression:0 "대공황"
 USA_great_depression_desc:0 "Since the collapse of the New York Stock Market in 1925, the United States has been gripped by the Great Depression. In addition to the massive economic woes plaguing America from this never-ending crisis; the Great Depression has given energy to both Long and Reed as they campaign against one another and the establishment."
 
-USA_black_monday:0 "The Great Depression"
+USA_black_monday:0 "대공황"
 USA_black_monday_desc:0 "The Great Depression which has been gripping America for over a decade looked to be slowly recovering under the Hoover administration, though nowhere near fast enough. However, the recent collapse of the Berlin Stock Market has just made the Great Depression even worse. Only God and the next President knows when this can be over."
 
-USA_political_crisis:0 "Political Crisis"
+USA_political_crisis:0 "정치적 위기"
 USA_political_crisis_desc:0 "The United States is in crisis. The Great Depression, which has been ravaging our nation for over a decade, has still not let up. Popular desperation has allowed the far-left Socialist Party of America and the far-right America First Party to gain strength in recent years. Others look to MacArthur and the Army as a way to solve both the depression and radicalization. Many worry that the United States could descend into civil war should our current situation not soon be resolved, or a radical presidential candidate win in the upcoming 1936 Elections."
 
-USA_new_year_strike_idea:0 "New Year Strike"
+USA_new_year_strike_idea:0 "신년 파업"
 USA_native_code_talkers_idea:0 "Native Code Talkers"
 
-amcivwar_idea:0 "Fighting for America!"
-USA_small_arms_industry_idea:0 "Small Arms Industry"
-USA_womens_land_army_idea:0 "Women's Land Army"
+amcivwar_idea:0 "미국을 위해 싸우자!"
+USA_small_arms_industry_idea:0 "소형 화기 산업"
+USA_womens_land_army_idea:0 "여성 육군"
 USA_womens_army_corps_idea:0 "Women's Army Corps"
 USA_national_guards_idea:0 "National Guards"
 USA_defense_logistics_agency_idea:0 "Defense Logistics Agency"
@@ -248,7 +248,7 @@ USA_great_migration3:0 "the Great Migration"
 USA_great_migration4:0 "the Great Migration"
 USA_great_migration5:0 "the Great Migration"
 
-USA_socialist_attack:0 "Socialist Attack"
+USA_socialist_attack:0 "사회주의의 공격"
 USA_federalist_attack:0 "Federalist Attack"
 USA_longist_attack:0 "Longist Attack"
 USA_intelligence_sharing_idea:0 "Inter-American Intelligence Agency"
@@ -333,36 +333,36 @@ USA_develop_brazil:0 "Industrial Support for Brazil"
 USA_develop_uruguay:0 "Industrial Support for Uruguay"
 USA_develop_paraguay:0 "Industrial Support for Paraguay"
 
-USA_new_monroe_doctrine:0 "The New Monroe Doctrine"
+USA_new_monroe_doctrine:0 "신 먼로 독트린"
 USA_new_monroe_doctrine_desc:0 ""
-USA_join_russia:0 "Ally with the Russians"
+USA_join_russia:0 "러시아인들과의 동맹"
 USA_join_russia_desc:0 ""
-USA_join_germany:0 "Join the Reichspakt"
+USA_join_germany:0 "제국조약 가입"
 USA_join_germany_desc:0 ""
-USA_join_entente:0 "Join the Entente"
+USA_join_entente:0 "협상국 가입"
 USA_join_entente_desc:0 ""
-USA_join_canada_tech:0 "Join ISAC"
+USA_join_canada_tech:0 "ISAC 가입"
 USA_join_canada_tech_desc:0 "We should join the ISAC and add our scientific expertise to it."
-USA_join_german_tech:0 "Join Kaiser Wilhelm Society"
+USA_join_german_tech:0 "카이저 빌헬름 학회 가입"
 USA_join_german_tech_desc:0 "We should join the Kaiser Wilhelm Society and add our scientific expertise to it."
-USA_form_ant:0 "Form The Antillean Union"
+USA_form_ant:0 "앤틸리스 연방 구성"
 USA_form_ant_desc:0 "Syndicalism tore the United States asunder, and while its foul stain has been exorcised from our own nation, its spectre still haunts the Caribbean. With the West Indies having fallen to its siren song, but Cuban and the Dominican Republic firmly under our influence, we should consider pushing for the two nations to unite as a bulwark against Syndicalism in the region."
 
-USA_reconstruction_decisions:0 "Rebuilding America"
+USA_reconstruction_decisions:0 "미국을 재건하자"
 USA_reconstruction_decisions_desc:0 "With the civil war now at an end, we must heal the scars that have come from it."
-USA_rebuild_new_england:0 "Rebuild New England"
-USA_rebuild_the_south:0 "Rebuild the South"
-USA_rebuild_the_south_atlantic:0 "Rebuild the South Atlantic States"
-USA_rebuild_the_steel_belt:0 "Rebuild the Steel Belt"
-USA_rebuild_the_west:0 "Rebuild the West"
-USA_rebuild_rockies:0 "Rebuild the Rocky Mountain States"
-USA_rebuild_the_pacific_coast:0 "Rebuild the Pacific Coast"
-USA_reclaim_new_england_decision:0 "Reclaim New England"
-USA_reclaim_alaska_decision:0 "Reclaim Alaska"
-USA_reclaim_hawaii_decision:0 "Reclaim Hawaii"
-USA_capital_returns_to_dc:0 "Move the Capital back to Washington D.C"
+USA_rebuild_new_england:0 "뉴잉글랜드 재건"
+USA_rebuild_the_south:0 "남부 재건"
+USA_rebuild_the_south_atlantic:0 "남대서양 지역 재건"
+USA_rebuild_the_steel_belt:0 "강철 벨트 재건"
+USA_rebuild_the_west:0 "서부 재건"
+USA_rebuild_rockies:0 "로키 산맥 지역 재건"
+USA_rebuild_the_pacific_coast:0 "태평양 해안 재건"
+USA_reclaim_new_england_decision:0 "뉴잉글랜드 반환 요구"
+USA_reclaim_alaska_decision:0 "알래스카 반환 요구"
+USA_reclaim_hawaii_decision:0 "하와이 반환 요구"
+USA_capital_returns_to_dc:0 "수도를 워싱턴 D.C로 재이전"
 
-USA_rainbow_war_plans_decisions:0 "The Rainbow War Plans"
+USA_rainbow_war_plans_decisions:0 "무지개색 계획"
 USA_rainbow_war_plans_decisions_desc:0 "The heads of the department of War have come together to craft a series of war plans that have been nicknamed the Rainbow War Plans due to the fact each plan is given a specific colour as their code. We should look into them to see what shall be useful for protecting America."
 
 USA_war_plan_white1:0 "War Plan White - embargo"
