--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -101,19 +101,19 @@ VICTORY_POINTS_1221:0 "바탕가스"
 VICTORY_POINTS_1269:0 "과달카날"
 VICTORY_POINTS_1273:0 "고아"
 VICTORY_POINTS_1278:0 "우파"
-VICTORY_POINTS_1315:0 "타와이" #Dawei
+VICTORY_POINTS_1315:0 "타와이" #다웨이
 VICTORY_POINTS_1319:0 "쿤밍"
-VICTORY_POINTS_1323:0 "성 조지"
-VICTORY_POINTS_1330:0 "양곤" #Rangoon
+VICTORY_POINTS_1323:0 "세인트 조지"
+VICTORY_POINTS_1330:0 "양곤" #랑군
 VICTORY_POINTS_1349:0 "봄베이"
-VICTORY_POINTS_1403:0 "모울메인" #Moulmein
+VICTORY_POINTS_1403:0 "모울메인" #모울메인
 VICTORY_POINTS_1408:0 "벤쿠버"
 VICTORY_POINTS_1409:0 "마두라이"
 VICTORY_POINTS_1413:0 "사마랑"
 VICTORY_POINTS_1415:0 "다구판"
 VICTORY_POINTS_1440:0 "산후안"
 VICTORY_POINTS_1459:0 "타슈켄트"
-VICTORY_POINTS_1464:0 "비엔티안" #Viangchan
+VICTORY_POINTS_1464:0 "비엔티안" #비앙찬
 VICTORY_POINTS_1467:0 "스테파나케르트"
 VICTORY_POINTS_1468:0 "더반"
 VICTORY_POINTS_1488:0 "치앙마이"
@@ -262,8 +262,8 @@ VICTORY_POINTS_3995:0 "사이판"
 VICTORY_POINTS_3999:0 "하카"
 VICTORY_POINTS_4050:0 "후이저우"
 VICTORY_POINTS_4014:0 "카타리나"
-VICTORY_POINTS_4052:0 "헤이조" #Pyongyang
-VICTORY_POINTS_4056:0 "부산" #Pusan/Busan
+VICTORY_POINTS_4052:0 "헤이조" #평양
+VICTORY_POINTS_4056:0 "부산" #부산/부산
 VICTORY_POINTS_4075:0 "하노이"
 VICTORY_POINTS_4076:0 "알렉산드리아"
 VICTORY_POINTS_4102:0 "카고시마"
@@ -285,10 +285,10 @@ VICTORY_POINTS_4245:0 "콜카타"
 VICTORY_POINTS_4250:0 "카라간다"
 VICTORY_POINTS_4256:0 "시안"
 VICTORY_POINTS_4268:0 "누메아"
-VICTORY_POINTS_4275:0 "마리트" #Myeik
+VICTORY_POINTS_4275:0 "마리트" #몌이크
 VICTORY_POINTS_4286:0 "수바"
 VICTORY_POINTS_4288:0 "칼라판"
-VICTORY_POINTS_4302:0 "시암 나콘" #Siemreap
+VICTORY_POINTS_4302:0 "시암 나콘" #시암립
 VICTORY_POINTS_4312:0 "나콘시타마라트"
 VICTORY_POINTS_4318:0 "푸타오"
 VICTORY_POINTS_4329:0 "포트 모르즈비"
@@ -303,7 +303,7 @@ VICTORY_POINTS_4397:0 "빈"
 VICTORY_POINTS_4401:0 "사이공"
 VICTORY_POINTS_4405:0 "나트랑"
 VICTORY_POINTS_4424:0 "조흐루"
-VICTORY_POINTS_4433:0 "사타힙" # Chonburi
+VICTORY_POINTS_4433:0 "사타힙" #촌부리
 VICTORY_POINTS_4436:0 "펠로타스"
 VICTORY_POINTS_4459:0 "고라크푸르"
 VICTORY_POINTS_4464:0 "빌록시"
@@ -460,7 +460,7 @@ VICTORY_POINTS_7087:0 "시즈오카"
 VICTORY_POINTS_7097:0 "창샤"
 VICTORY_POINTS_7101:0 "창더"
 VICTORY_POINTS_7109:0 "바오딩"
-VICTORY_POINTS_7125:0 "경성" #Seoul/Gyeongseong
+VICTORY_POINTS_7125:0 "경성" #서울/경성
 VICTORY_POINTS_7132:0 "오랑"
 VICTORY_POINTS_7137:0 "난닝"
 VICTORY_POINTS_7138:0 "샬럿"
@@ -469,14 +469,14 @@ VICTORY_POINTS_7159:0 "헝양"
 VICTORY_POINTS_7167:0 "한커우"
 VICTORY_POINTS_7169:0 "센다이"
 VICTORY_POINTS_7183:0 "세비야"
-VICTORY_POINTS_7186:0 "타이호쿠" #Taipei
+VICTORY_POINTS_7186:0 "타이호쿠" #타이페이
 VICTORY_POINTS_7191:0 "황저우"
 VICTORY_POINTS_7197:0 "코치"
 VICTORY_POINTS_7202:0 "찰스턴"
 VICTORY_POINTS_7211:0 "파트라"
 VICTORY_POINTS_7236:0 "핫야이"
 VICTORY_POINTS_7251:0 "라바울"
-VICTORY_POINTS_7254:0 "파테인" #Bassein
+VICTORY_POINTS_7254:0 "파테인" #바세인
 VICTORY_POINTS_7259:0 "빅토리아"
 VICTORY_POINTS_7274:0 "노보시비르스크"
 VICTORY_POINTS_7302:0 "수바"
@@ -492,10 +492,10 @@ VICTORY_POINTS_7376:0 "프놈펜"
 VICTORY_POINTS_7381:0 "바타비아"
 VICTORY_POINTS_7394:0 "코르크"
 VICTORY_POINTS_7402:0 "티루바난타푸람"
-VICTORY_POINTS_7408:0 "방콕" #Bangkok
+VICTORY_POINTS_7408:0 "방콕" #방콕
 VICTORY_POINTS_7418:0 "시안"
 VICTORY_POINTS_7421:0 "반둥"
-VICTORY_POINTS_7427:0 "믈라카" #Malacca
+VICTORY_POINTS_7427:0 "믈라카" #믈라카
 VICTORY_POINTS_7447:0 "코친"
 VICTORY_POINTS_7476:0 "벨루오리존치"
 VICTORY_POINTS_7480:0 "모빌"
@@ -517,7 +517,7 @@ VICTORY_POINTS_7622:0 "아바나"
 VICTORY_POINTS_7630:0 "파나마 시티"
 VICTORY_POINTS_7636:0 "상조제두히우프레투"
 VICTORY_POINTS_7638:0 "리오그란데"
-VICTORY_POINTS_7645:0 "스퉁트렝" #Chiang Taeng/Xiang Taeng
+VICTORY_POINTS_7645:0 "스퉁트렝" #치앙톙/샹톙
 VICTORY_POINTS_7656:0 "카이펑"
 VICTORY_POINTS_7660:0 "산토 도밍고"
 VICTORY_POINTS_7661:0 "바쿠"
@@ -526,7 +526,7 @@ VICTORY_POINTS_7798:0 "멜버른"
 VICTORY_POINTS_7799:0 "울리아스타이"
 VICTORY_POINTS_7859:0 "캔버라"
 VICTORY_POINTS_7899:0 "선더베일"
-VICTORY_POINTS_7909:0 "치앙퉁" #Kengtung
+VICTORY_POINTS_7909:0 "치앙퉁" #켕퉁
 VICTORY_POINTS_7938:0 "알라하바드"
 VICTORY_POINTS_7940:0 "거얼무"
 VICTORY_POINTS_7953:0 "아바즈"
@@ -560,7 +560,7 @@ VICTORY_POINTS_8190:0 "카보 프리오"
 VICTORY_POINTS_8193:0 "바르트스타드"
 VICTORY_POINTS_8199:0 "트루히요"
 VICTORY_POINTS_8210:0 "오루프레투"
-VICTORY_POINTS_8214:0 "마피켕" #Gabrorone
+VICTORY_POINTS_8214:0 "마피켕" #가브로네
 VICTORY_POINTS_8215:0 "멘도사"
 VICTORY_POINTS_8216:0 "투쿠만"
 VICTORY_POINTS_8228:0 "프리맨틀"
@@ -611,7 +611,7 @@ VICTORY_POINTS_9617:0 "부쿠레슈티"
 VICTORY_POINTS_9620:0 "베른"
 VICTORY_POINTS_9628:0 "블라디캅카스"
 VICTORY_POINTS_9627:0 "라이바하"
-VICTORY_POINTS_9635:0 "키우스텐자" #Kyustendzha
+VICTORY_POINTS_9635:0 "키우스텐자" #키우스톈자
 VICTORY_POINTS_9642:0 "브장송"
 VICTORY_POINTS_9660:0 "부다페스트"
 VICTORY_POINTS_9671:0 "샌 프란시스코"
@@ -670,8 +670,8 @@ VICTORY_POINTS_10106:0 "모술"
 VICTORY_POINTS_10125:0 "나고야"
 VICTORY_POINTS_10135:0 "욕야카르타"
 VICTORY_POINTS_10149:0 "퐁디셰리"
-VICTORY_POINTS_10156:0 "맘방" #Satun
-VICTORY_POINTS_10177:0 "프라타봉" #Battambang
+VICTORY_POINTS_10156:0 "맘방" #사툰
+VICTORY_POINTS_10177:0 "프라타봉" #바탐방
 VICTORY_POINTS_10199:0 "산다칸"
 VICTORY_POINTS_10201:0 "트링코말리"
 VICTORY_POINTS_10212:0 "코타키나발루"
@@ -832,18 +832,18 @@ VICTORY_POINTS_11936:0 "타인호아"
 VICTORY_POINTS_11954:0 "벵가지"
 VICTORY_POINTS_11969:0 "튀니스"
 VICTORY_POINTS_11984:0 "레프코샤"
-VICTORY_POINTS_12003:0 "발레타" #Malta
+VICTORY_POINTS_12003:0 "발레타" #몰타
 VICTORY_POINTS_12038:0 "알메리아"
 VICTORY_POINTS_12051:0 "콩스탕틴"
 VICTORY_POINTS_12055:0 "쑤저우"
 VICTORY_POINTS_12067:0 "옌청"
-VICTORY_POINTS_12068:0 "타카오" #Gaoxiong/KaohsiungTakao/Takow
+VICTORY_POINTS_12068:0 "타카오" #가오슝/카오슝타카오/타카우
 VICTORY_POINTS_12080:0 "인도리"
 VICTORY_POINTS_12090:0 "시트웨"
 VICTORY_POINTS_12113:0 "탄중피낭"
 VICTORY_POINTS_12118:0 "세부"
 VICTORY_POINTS_12127:0 "바고"
-VICTORY_POINTS_12131:0 "빠타니" #Petani
+VICTORY_POINTS_12131:0 "빠타니" #페타니
 VICTORY_POINTS_12133:0 "칸토"
 VICTORY_POINTS_12137:0 "러크나우"
 VICTORY_POINTS_12140:0 "괌"
@@ -863,7 +863,7 @@ VICTORY_POINTS_12256:0 "퉁구"
 VICTORY_POINTS_12268:0 "팔렘방"
 VICTORY_POINTS_12289:0 "프레더릭턴"
 VICTORY_POINTS_12295:0 "콜하푸르"
-VICTORY_POINTS_12299:0 "싱가포르" #Singapore
+VICTORY_POINTS_12299:0 "싱가포르" #싱가포르
 VICTORY_POINTS_12304:0 "킹스톤"
 VICTORY_POINTS_12320:0 "예레반"
 VICTORY_POINTS_12335:0 "모니와"
@@ -974,7 +974,7 @@ VICTORY_POINTS_13511:0 "오리부로"
 VICTORY_POINTS_13515:0 "트리니다드"
 VICTORY_POINTS_13520:0 "리베랄타"
 VICTORY_POINTS_13537:0 "타라포토"
-VICTORY_POINTS_13543:0 "페낭" #Penang
+VICTORY_POINTS_13543:0 "페낭" #페낭
 VICTORY_POINTS_13544:0 "위트레흐트"
 VICTORY_POINTS_13548:0 "살타"
 VICTORY_POINTS_13551:0 "잔지바르스타드"
